--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
         /* Background image + dark overlay */
         background:
             linear-gradient(180deg, rgba(0,0,0,0.70) 0%, rgba(0,0,0,0.65) 45%, rgba(0,0,0,0.78) 100%),
-            url("/static/assets/hero-bg.jpg");
+            url("/assets/hero-bg.jpg");
         background-size: cover;
         background-position: center;
         box-shadow: 0 20px 60px rgba(0,0,0,0.35);
