Update report links to remove 'static' prefix

--- a/static/index.html
+++ b/static/index.html
@@ -1066,7 +1066,7 @@
             <div class="hero-actions">
                 <a class="btn-primary" href="#try">Analyze Your Image</a>
                 <a class="btn-secondary"
-                    href="/static/report/building-damage-report.pdf"
+                    href="/report/building-damage-report.pdf"
                     target="_blank"
                     rel="noopener">
                     Read Full Report
@@ -1176,7 +1176,7 @@
             </p>
 
             <a class="btn-primary"
-            href="/static/report/building-damage-report.pdf"
+            href="/report/building-damage-report.pdf"
             target="_blank"
             rel="noopener">
             Open Report PDF
@@ -1272,20 +1272,20 @@
 
         <div class="sample-grid">
             <img
-            src="/static/samples/preview_1.png"
-            data-file="/static/samples/hurricane_harvey.tif"
+            src="/samples/preview_1.png"
+            data-file="/samples/hurricane_harvey.tif"
             class="sample-img"
             alt="Sample damage image 1">
 
             <img
-            src="/static/samples/preview_2.png"
-            data-file="/static/samples/palu_tsunami.tif"
+            src="/samples/preview_2.png"
+            data-file="/samples/palu_tsunami.tif"
             class="sample-img"
             alt="Sample damage image 2">
 
             <img
-            src="/static/samples/preview_3.png"
-            data-file="/static/samples/santarosa_wildfire.tif"
+            src="/samples/preview_3.png"
+            data-file="/samples/santarosa_wildfire.tif"
             class="sample-img"
             alt="Sample damage image 3">
         </div>
@@ -1382,7 +1382,7 @@
     </div>
 
     <div class="footer-links">
-      <a href="/static/report/building-damage-report.pdf" target="_blank" rel="noopener">Full Report</a>
+      <a href="/report/building-damage-report.pdf" target="_blank" rel="noopener">Full Report</a>
       <!-- Replace # with your actual GitHub URL -->
       <a href="https://github.com/SajjaadJurawon/Projects/tree/main/Building%20Damage%20Assessment" target="_blank" rel="noopener">GitHub</a>
       <!-- Replace mailto with your email if you want -->
